# archviz-diagram

./: .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  SKILL.md  constitution.md  preview.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agents/: openai.yaml
archviz/: __init__.py  cli.py  engine.py  mcp_server.py
archviz-skills/: CONTRIBUTING.md  DESIGN.md  requirements.txt  snapshot.json
archviz_diagram/: cli.py  engine.py  mcp_server.py
examples/: README.md  academic-table-data.json  ascii-demo.txt  aver-v1-architecture-semantic.html  git-push-release-workflow.html  git-push-release-workflow.mmd  hair-dryer-exploded.html  html-demo.html  mermaid-demo.md  teaching-building-3d.html  us-flows.html  us-population-migration-2024.html
references/: 3d-cleanup-log.md  animation-vocabulary.md  ascii-cli-alternatives.md  ascii-workflow.md  brand-gate.md  dark-mode-tokens.md  design-resources-curated.md  diagram-types-technical.md  ecosystem-routing.md  educational-flat-system.md  export-patterns.md  external-tools.md  gotchas.md  icon-generation.md  icons-patterns.md  monet-palette.md  reading-to-viz-learning-workflow.md  semantic-component-colors.md  skill-publishing.md  structural-diagram-types.md  swiss-modernist-grid.md  termaid-routing.md  validation-checklist.md  webgl-info-arch.md  wesanderson-palette.md
research/: 优化评估与架构决策.md
scripts/: fix_html_syntax.py  generate_docx_charts.py  generate_html_charts.py  git-pre-commit.sh  publish-skill.py  reading-to-viz.py  sync_export.py  sync_theme.py
(+104 files in other folders)
