[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archviz"
version = "0.4.0"
description = "Restrained information visualization engine for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.20"]
all = ["mcp>=1.20"]

[project.scripts]
archviz = "archviz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["archviz"]
